--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/layout.css" />
-    <script src="../socket.io/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="../js/jquery.min.js"></script>
     <script src="../js/chat.js"></script>
 </head>
