--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,7 +27,7 @@
             <p class="help-block text-danger hide" id="labelError">Falsche Eingabe</p>
         </div>
         <div class="form-group">
-            <button class="btn btn-lg btn-primary btn-block" type="submit" id="btnSignIn">Login</button>
+            <a class="btn btn-lg btn-primary btn-block" type="submit" id="btnSignIn">Login</a>
         </div>
         <div class="form-group">
             <a href="#" onclick="$('#modalPWForgot').modal('show')" class="text-center">Passwort vergessen?</a>
