Bilder in Projektstruktur Aufgenommen

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,10 +11,10 @@
     <script src="../js/login.js"></script>
 </head>
 <body style="background-color: #e0e0e0">
-<header>ConGraph <a>powered by NoteJS</a></header>
-
+<!--<header>ConGraph <a>powered by NoteJS</a></header>-->
 <!--Login section-->
 <section id="login">
+    <img src="../img/congraph.png" alt="ConGraph Logo" class="center-block img-rounded" style="width: 340px; padding-bottom: 20px">
     <form class="form-signin" role="form" style="background-color: #fff">
         <h1 class="form-signin-heading text-center">Login</h1>
         <div class="form-group">
