--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,7 +32,7 @@
         <div class="form-group">
             <a href="#" onclick="$('#modalPWForgot').modal('show')" class="text-center">Passwort vergessen?</a>
         </div>
-        <a id="btnKontoErstellen" href="#"><p class="text-center" style="font-size: 16px; padding-top: 15px">Konto erstellen</p> </a>
+        <a id="btnKontoErstellen" href="#" onclick="$('#modalRegister').modal('show')"><p class="text-center" style="font-size: 16px; padding-top: 15px">Konto erstellen</p> </a>
     </form>
 </section>
 
@@ -53,6 +53,37 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Abbrechen</button>
                 <button type="button" class="btn btn-primary" id="sendPWForgotMail">Send Mail</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="modalRegister" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Registrierung</h4>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <div class="input-group input-group-lg">
+                        <input id="inputRegisterMail" type="text" class="form-control" placeholder="e-Mail Adresse" aria-describedby="sizing-addon1">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="input-group input-group-lg">
+                        <input id="inputRegisterName" type="text" class="form-control" placeholder="Benutzername" aria-describedby="sizing-addon1">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="input-group input-group-lg">
+                        <input id="inputRegisterPW" type="password" class="form-control" placeholder="Password" aria-describedby="sizing-addon1">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Abbrechen</button>
+                <button type="button" class="btn btn-primary" id="sendRegister">Registrieren</button>
             </div>
         </div>
     </div>
