--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1,6 +1,7 @@
 
 section{
     padding-right: 400px;
+
 }
 aside {
     z-index: 1000;
@@ -33,4 +34,59 @@ aside {
     bottom: 0px;
     margin-right: -400px;
     overflow-y: auto;
+}
+.dashboard{
+    background-color: #00A000;
+    width: 1024px;
+    height: inherit;
+    min-height: 768px;
+
+}
+.panel{
+    height: 150px;
+    width: 150px;
+    float: left;
+    border: 2px solid #666666;
+    background-color: #ccc;
+    margin-right: 5px;
+    -webkit-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 3px #000;
+    -ms-box-shadow: inset 0 0 3px #000;
+    box-shadow: inset 0 0 3px #000;
+    text-align: center;
+    cursor: move;
+}
+body {
+    min-width: 520px;
+}
+.column {
+    width: 170px;
+    float: left;
+    padding-bottom: 100px;
+}
+.portlet {
+    margin: 0 1em 1em 0;
+    padding: 0.3em;
+}
+.portlet-header {
+    padding: 0.2em 0.3em;
+    margin-bottom: 0.5em;
+    position: relative;
+}
+.portlet-toggle {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    margin-top: -8px;
+}
+.portlet-content {
+    padding: 0.4em;
+}
+.portlet-placeholder {
+    border: 1px dotted black;
+    margin: 0 1em 1em 0;
+    height: 50px;
 }
