--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/bootstrap-theme.css" />
     <link rel="stylesheet" href="../css/bootstrap.css" />
     <link rel="stylesheet" href="../css/style.css" />
+    <script src="/socket.io/socket.io.js"></script>
     <script src="../js/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/login.js"></script>
