panel auf server ausgelagert

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -56,6 +56,10 @@
 </aside>
 
 <section>
+    <div id="dashboard">
+
+
+    </div>
     <div class="column" id="column1">
 
         <div class="portlet">
@@ -70,7 +74,7 @@
 
     </div>
 
-    <div class="column">
+    <div class="column" id="column2">
 
         <div class="portlet">
             <div class="portlet-header">Shopping</div>
@@ -79,7 +83,7 @@
 
     </div>
 
-    <div class="column">
+    <div class="column" id="column3">
 
         <div class="portlet">
             <div class="portlet-header">Links</div>
