--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,19 +3,17 @@
 <head>
     <title>ConGraph</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/panel.css" />
     <link rel="stylesheet" href="../css/layout.css" />
     <link rel="stylesheet" href="../css/bootstrap-theme.css" />
     <link rel="stylesheet" href="../css/bootstrap.css" />
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.3/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="../css/jquery-ui.min.css">
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="../js/jquery.min.js"></script>
-    <script src="../js/chat.js"></script>
-    <script src="../js/panel_jq.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/home.js"></script>
-    <script src="//code.jquery.com/ui/1.11.3/jquery-ui.js"></script>
+    <script src="../js/jquery-ui.min.js"></script>
 
 </head>
 <body>
@@ -24,10 +22,13 @@
 
 <aside>
     <div>
-        <input id="newPanel" type="submit" value="Add Panel">
+        <input id="btnNewPanel" type="submit" value="Add Panel">
     </div>
     <div>
-        <input id="btnAddDashboard" type="submit" value="Add Dashboard">
+        <input id="btnAddDashboardModal" onclick="$('#modalNewDashboard').modal('show')" type="submit" value="Add Dashboard">
+    </div>
+    <div>
+        <input id="btnAddUserToDashboardModal" onclick="$('#modalAddUserToDashboard').modal('show')" type="submit" value="Add User To Dashboard">
     </div>
     <div class="dropdown">
         <button id="btnDashboardList" class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
@@ -35,10 +36,7 @@
             <span class="caret"></span>
         </button>
         <ul id="dashboardList" class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-            <li role="presentation" onclick="loadDashboards()"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Another action</a></li>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Something else here</a></li>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated link</a></li>
+            <!--Content Load Dynamik-->
         </ul>
     </div>
     <div class="chatTitle">
@@ -57,48 +55,53 @@
 
 <section>
     <div id="dashboard">
-
-
-    </div>
-    <div class="column" id="column1">
-
-        <div class="portlet">
-            <div class="portlet-header">Feeds</div>
-            <div class="portlet-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</div>
-        </div>
-
-        <div class="portlet">
-            <div class="portlet-header">News</div>
-            <div class="portlet-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</div>
-        </div>
-
-    </div>
-
-    <div class="column" id="column2">
-
-        <div class="portlet">
-            <div class="portlet-header">Shopping</div>
-            <div class="portlet-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</div>
-        </div>
-
-    </div>
-
-    <div class="column" id="column3">
-
-        <div class="portlet">
-            <div class="portlet-header">Links</div>
-            <div class="portlet-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</div>
-        </div>
-
-        <div class="portlet">
-            <div class="portlet-header">Images</div>
-            <div class="portlet-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</div>
-        </div>
-
+        <!--Generate dynamic-->
     </div>
 </section>
 
 
+<!--Modal Add User To Dashboard-->
+<div class="modal fade" id="modalAddUserToDashboard" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Add user to dashboard</h4>
+            </div>
+            <div class="modal-body">
+                <div class="input-group input-group-lg">
+                    <span class="input-group-addon" id="sizing-addon1">@</span>
+                    <input id="inputUserMail" type="text" class="form-control" placeholder="e-Mail Adresse User" aria-describedby="sizing-addon1">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" id="btnAddUserToDashboard">Add User</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--Modal New Dashboard-->
+<div class="modal fade" id="modalNewDashboard" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Add dashboard</h4>
+            </div>
+            <div class="modal-body">
+                <div class="input-group input-group-lg">
+                    <input id="inputDashboardName" type="text" class="form-control" placeholder="Dashboard Name" aria-describedby="sizing-addon1">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" id="btnAddDashboard">Add Dashboard</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
