--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/bootstrap-theme.css" />
     <link rel="stylesheet" href="../css/bootstrap.css" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/login.css" />
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="../js/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
