--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ConGraph</title>
+    <title>ConGraph - Content Visualization</title>
+    <meta name="description" content="ConGraph ist ein Tool um Daten grafisch ansprechend zu organisieren." />
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/panel.css" />
     <link rel="stylesheet" href="../css/layout.css" />
     <link rel="stylesheet" href="../css/bootstrap-theme.css" />
     <link rel="stylesheet" href="../css/bootstrap.css" />
     <link rel="stylesheet" href="../css/jquery-ui.min.css">
+    <link rel="stylesheet" href="../css/main.css">
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="../js/jquery.min.js"></script>
@@ -17,48 +19,61 @@
 
 </head>
 <body>
-<header>ConGraph <a>powered by NoteJS</a></header>
+<header>
+    <div id="fullhead">
+        <div>
+            <hgroup>
+                <h1 id="hdln">ConGraph</h1>
+                <h2 id="sbhdln">Visualize your Content</h2>
+            </hgroup>
+        </div>
+        <hr noshade size="1">
+    </div>
+</header>
+<div id="right">
+    <div>
+        <nav>
+            <button type="button" class="btnM btnL" name="messages" value="add board" onclick="$('#modalNewDashboard').modal('show')">
+                <span class="glyphicon glyphicon-plus pull-left" style="font-size: smaller;" aria-hidden="true"></span>add board</button>
+            <button id="btnLogout" type="button" class="btnM btnR" name="signout" value="sign out">
+                sign out</button>
+            <span class="dropdown" style="width: 105px">
+                <button id="btnDashboardList" class="btnM btnL dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
+                    my boards
+                    <span class="caret"></span>
+                </button>
+                <ul id="dashboardList" class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+                    <!--Content Load Dynamik-->
+                </ul>
+            </span>
+            <button type="button" class="btnM btnR" name="myaccount" value="my account" onclick="alert('Das bin ich.');">
+                my account</button>
+        </nav>
+    </div>
+    <div id="mbar">
 
-
-<aside>
-    <div>
-        <input id="btnNewPanel" type="submit" value="Add Panel">
-    </div>
-    <div>
-        <input id="btnAddDashboardModal" onclick="$('#modalNewDashboard').modal('show')" type="submit" value="Add Dashboard">
-    </div>
-    <div>
-        <input id="btnAddUserToDashboardModal" onclick="$('#modalAddUserToDashboard').modal('show')" type="submit" value="Add User To Dashboard">
-    </div>
-    <div class="dropdown">
-        <button id="btnDashboardList" class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
-            Dropdown
-            <span class="caret"></span>
+        <button id="btnNewPanel" type="button" class="btnM btnPnl" name="addpanel" value="add panel">
+            <span class="glyphicon glyphicon-plus pull-left" style="font-size: xx-large;" aria-hidden="true"></span>
+            Add Panel
         </button>
-        <ul id="dashboardList" class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-            <!--Content Load Dynamik-->
-        </ul>
-    </div>
-    <div class="chatTitle">
-        <h1>CHAT</h1>
-        <input id="name" type="text" placeholder="dein Name" />
-        <input id="text" type="text" placeholder="schreibe etwas..." />
-        <input id="senden" type="submit" class="btn" value="senden" />
-    </div>
-    <div class="chatList">
-        <ul id="content"></ul>
-        <br>
-        <br>
-    </div>
+        <button type="button" class="btnM btnUs" name="addpanel" value="manage user" onclick="$('#modalAddUserToDashboard').modal('show')">
+            Manage User
+        </button>
+        <button type="button" class="btnCol" name="addpanel"  onclick="alert('Farbe einstellen.');">
+        </button>
+        Background Color
+        <div id="chat">
 
-</aside>
+        </div>
+    </div>
+</div>
 
-<section>
-    <div id="dashboard">
+<div id="gesDB">
+    <h2 id="headerDashboard"> No Dashbaord selected! </h2>
+    <div id="dashboard" >
         <!--Generate dynamic-->
     </div>
-</section>
-
+</div>
 
 <!--Modal Add User To Dashboard-->
 <div class="modal fade" id="modalAddUserToDashboard" tabindex="-1" role="dialog" aria-hidden="true">
@@ -103,5 +118,6 @@
     </div>
 </div>
 
+<footer>Copyright © 2015</footer>
 </body>
 </html>
