--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,7 +8,7 @@
 html {
     background-color: #28697d;
     font-family: MyriadPro;
-    height:100%;
+    height:auto;
 }
 
 body {
@@ -22,6 +22,7 @@ body {
 HTML>body {
     padding: 0;
 }
+
 
 #fullhead {
     padding: 0;
@@ -114,6 +115,15 @@ nav {
     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#2c2d2e', endColorstr='#616161',GradientType=0);
     background-color:#2c2d2e;
 }
+.btnM.disabled,
+.btnM[disabled]{
+    cursor: not-allowed;
+    pointer-events: none;
+    opacity: 0.65;
+    filter: alpha(opacity=65);
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
 
 .btnL {
     padding: 10px;
@@ -175,14 +185,34 @@ nav {
     margin: 78px 8px 8px 8px;
 }
 
+.chatList {
+    height: 212px;
+    padding-left: 4px;
+    overflow: scroll;
+    overflow-x: hidden;
+}
+
 #gesDB {
     padding: 0;
-    margin: 120px 237px 5px 15px;
+    margin: 120px 237px 5px 0px;
     height: 500px;
+}
+
+#headerDashboard {
+    background: -webkit-linear-gradient(left, #000000 , #28697d); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(right, #000000, #28697d); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(right, #000000, #28697d); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to right, #000000, #28697d); /* Standard syntax */
+    color: #ffffff;
+    font-weight: normal;
+    font-size: 20px;
+    padding: 10px 10px 10px 40px;
+    margin-top: 0;
 }
 
 #dashboard {
     height: 500px;
+    margin-left: 40px;
 }
 
 footer {
