--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,6 @@
     <meta name="description" content="ConGraph ist ein Tool um Daten grafisch ansprechend zu organisieren." />
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/panel.css" />
-    <link rel="stylesheet" href="../css/layout.css" />
     <link rel="stylesheet" href="../css/bootstrap-theme.css" />
     <link rel="stylesheet" href="../css/bootstrap.css" />
     <link rel="stylesheet" href="../css/jquery-ui.min.css">
@@ -56,14 +55,21 @@
             <span class="glyphicon glyphicon-plus pull-left" style="font-size: xx-large;" aria-hidden="true"></span>
             Add Panel
         </button>
-        <button type="button" class="btnM btnUs" name="addpanel" value="manage user" onclick="$('#modalAddUserToDashboard').modal('show')">
+        <button id="btnAddUserToDashboardModal" type="button" class="btnM btnUs" name="manageuser" value="manage user" onclick="$('#modalAddUserToDashboard').modal('show')">
             Manage User
         </button>
-        <button type="button" class="btnCol" name="addpanel"  onclick="alert('Farbe einstellen.');">
+        <button id="colorChange" type="button" class="btnCol" name="addpanel">
         </button>
         Background Color
         <div id="chat">
-
+            <div class="chatList">
+                <ul id="content" style="padding-left: 0;"></ul>
+                <br>
+            </div>
+            <input id="text" name="Eingabe" type="text" size="20" placeholder="schreibe etwas...">
+            <button id="senden" type="submit" class="btnM" name="addpanel" value="senden">
+                <span class="glyphicon glyphicon-ok" style="font-size: smaller;" aria-hidden="true"></span>
+            </button>
         </div>
     </div>
 </div>
