--- a/views/login.ejs
+++ b/views/login.ejs
@@ -68,19 +68,13 @@
             </div>
             <div class="modal-body">
                 <div class="form-group">
-                    <div class="input-group input-group-lg">
-                        <input id="inputRegisterMail" type="text" class="form-control" placeholder="e-Mail Adresse" aria-describedby="sizing-addon1">
-                    </div>
+                    <input id="inputRegisterMail" type="text" class="form-control input-lg" placeholder="e-Mail Adresse" aria-describedby="sizing-addon1">
                 </div>
                 <div class="form-group">
-                    <div class="input-group input-group-lg">
-                        <input id="inputRegisterName" type="text" class="form-control" placeholder="Benutzername" aria-describedby="sizing-addon1">
-                    </div>
+                    <input id="inputRegisterName" type="text" class="form-control input-lg" placeholder="Benutzername" aria-describedby="sizing-addon1">
                 </div>
                 <div class="form-group">
-                    <div class="input-group input-group-lg">
-                        <input id="inputRegisterPW" type="password" class="form-control" placeholder="Password" aria-describedby="sizing-addon1">
-                    </div>
+                    <input id="inputRegisterPW" type="password" class="form-control input-lg" placeholder="Password" aria-describedby="sizing-addon1">
                 </div>
             </div>
             <div class="modal-footer">
