--- a/public/css/panel.css
+++ b/public/css/panel.css
@@ -1,10 +1,8 @@
 .column {
-    width: 170px;
-    float: left;
     padding-bottom: 100px;
 }
 .portlet {
-    margin: 0 1em 1em 0;
+    margin: 0 0 1em 0;
     padding: 0.3em;
 }
 .portlet-header {
