--- a/views/home.ejs
+++ b/views/home.ejs
@@ -76,7 +76,7 @@
 
 <div id="gesDB">
     <h2 id="headerDashboard"> No Dashbaord selected! </h2>
-    <div id="dashboard" >
+    <div id="dashboard" class="row">
         <!--Generate dynamic-->
     </div>
 </div>
@@ -128,19 +128,24 @@
 <div class="modal fade" id="modalNewPanel" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header" >
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="myModalLabel">Add Panel</h4>
             </div>
             <div class="modal-body">
-                <div class="input-group input-group-lg">
+                <div class="form-group">
                     <input id="inputPanelTitle" type="text" class="form-control" placeholder="Panel Title" aria-describedby="sizing-addon1">
-                    <input id="inputPanelDescription" type="text" class="form-control" placeholder="Panel Description" aria-describedby="sizing-addon1">
-                    <input id="inputPanelLink" type="text" class="form-control" placeholder="URL" aria-describedby="sizing-addon1">
-                    <input id="inputPanelFile" name="test" type="file" class="form-control">
-
-                    </form>
                 </div>
+                <div class="form-group">
+                    <textarea id="inputPanelDescription" rows="10" class="form-control" placeholder="Panel Description" aria-describedby="sizing-addon1"></textarea>
+                </div>
+                <div class="form-group">
+                    <input id="inputPanelLink" type="text" class="form-control" placeholder="URL" aria-describedby="sizing-addon1">
+                </div>
+                <div class="form-group">
+                    <input id="inputPanelFile" name="test" type="file" class="form-control">
+                </div>
+
             </div>
             <div class="modal-footer">
                 <button type="button" class="btnM" data-dismiss="modal">Cancel</button>
@@ -150,6 +155,35 @@
     </div>
 </div>
 
+<!--Modal Edit Panel-->
+<div class="modal fade" id="modalEditPanel" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Edit Panel</h4>
+            </div>
+            <div class="modal-body">
+                    <div class="form-group">
+                        <input id="editPanelTitle" type="text" class="form-control" placeholder="Panel Title" aria-describedby="sizing-addon1">
+                    </div>
+                    <div class="form-group">
+                        <textarea id="editPanelDescription" rows="10" class="form-control" placeholder="Panel Description" aria-describedby="sizing-addon1"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <input id="editPanelLink" type="text" class="form-control" placeholder="URL" aria-describedby="sizing-addon1">
+                    </div>
+                    <div class="form-group">
+                        <input id="editPanelFile" name="test" type="file" class="form-control">
+                    </div>
+                </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btnM" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btnM" id="btnEditPanel">Save</button>
+            </div>
+        </div>
+    </div>
+</div>
 <footer>Copyright © 2015</footer>
 </body>
 </html>
