--- a/public/css/panel.css
+++ b/public/css/panel.css
@@ -10,7 +10,7 @@
     margin-bottom: 0.5em;
     position: relative;
 }
-.portlet-toggle {
+.portlet-delete {
     position: absolute;
     top: 50%;
     right: 0;
