--- a/public/css/panel.css
+++ b/public/css/panel.css
@@ -24,3 +24,41 @@
     margin: 0 1em 1em 0;
     height: 50px;
 }
+.box{
+    height: 100%;
+    border: 1px solid #ccc;
+    background-color: #ffffff;
+    cursor: move;
+}
+.box-header{
+    text-align: center;
+    background: #eee;
+    padding: 1px 30px 0 10px;
+    border-bottom: 1px solid #ccc;
+    cursor: move;
+    position: relative;
+
+}
+.box-header-btn{
+    top: 15px;
+    right: 10px;
+    cursor: pointer;
+    position: absolute;
+}
+.box-content{
+    padding: 10px;
+    cursor: pointer;
+    min-height: 10px;
+}
+.box-image{
+    background: #eee;
+    padding: 5px 30px 0 30px;
+    cursor: move;
+    position: relative;
+}
+.box-image-small{
+    max-height: 100px;
+}
+.box-image-big{
+    max-height: 250px;
+}
