--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/bootstrap-theme.css" />
     <link rel="stylesheet" href="../css/bootstrap.css" />
     <link rel="stylesheet" href="../css/jquery-ui.min.css">
+    <link rel="stylesheet" href="../css/jquery.gridster.css">
     <link rel="stylesheet" href="../css/main.css">
 
     <script src="/socket.io/socket.io.js"></script>
@@ -15,6 +16,7 @@
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/home.js"></script>
     <script src="../js/jquery-ui.min.js"></script>
+    <script src="../js/jquery.gridster.min.js"></script>
 
 </head>
 <body>
@@ -79,9 +81,16 @@
 
 <div id="gesDB">
     <h2 id="headerDashboard"> No Dashbaord selected! </h2>
-    <div id="dashboard" class="row">
-        <!--Generate dynamic-->
-    </div>
+    <section style="display: block;margin: 3em 0">
+        <div class="gridster">
+            <ul style="list-style: none">
+
+            </ul>
+        </div>
+    </section>
+    <!--<div id="dashboard" class="row">-->
+        <!--&lt;!&ndash;Generate dynamic&ndash;&gt;-->
+    <!--</div>-->
 </div>
 
 <!--Modal Add User To Dashboard-->
@@ -146,6 +155,9 @@
                     <input id="inputPanelLink" type="text" class="form-control" placeholder="URL" aria-describedby="sizing-addon1" value="http://">
                 </div>
                 <div class="form-group">
+                    <input id="inputPanelImg" type="text" class="form-control" placeholder="IMG">
+                </div>
+                <div class="form-group">
                     <input id="inputPanelFile" name="test" type="file" class="form-control">
                 </div>
 
@@ -204,6 +216,9 @@
                 </div>
             </div>
             <div class="modal-footer">
+                <button type="button" class="btn btn-default" id="btnDeletePanel">
+                    <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                </button>
                 <button type="button" class="btn btn-default" id="btnEditPanel" onclick="editPanel(globalPanelId)">
                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                 </button>
