--- a/views/home.ejs
+++ b/views/home.ejs
@@ -160,7 +160,9 @@
                 <div class="form-group">
                     <input id="inputPanelFile" name="test" type="file" class="form-control">
                 </div>
-
+                <div class="form-group" id="setImages">
+                    <img src="../img/icon/basic16.png" width="50px" height="50px" onclick="getImg()" id="">
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btnM" data-dismiss="modal">Cancel</button>
