view und edit Icon läuft (dirty :P )

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -155,9 +155,7 @@
                     <input id="inputPanelLink" type="text" class="form-control" placeholder="URL" aria-describedby="sizing-addon1" value="http://">
                 </div>
                 <div class="form-group img">
-                    <!--<input id="inputPanelImg" type="text" class="form-control" placeholder="IMG">-->
-                    <label>Icon</label>
-                        <div id="setIcon"></div>
+                    <div id="setIcon"></div>
                 </div>
                 <div class="form-group">
                     <input id="inputPanelFile" name="test" type="file" class="form-control">
@@ -194,7 +192,6 @@
                     </div>
                     <div class="form-group img">
                         <!--<input id="inputPanelImg" type="text" class="form-control" placeholder="IMG">-->
-                        <label>Icon</label>
                         <div id="setEditIcon"></div>
                     </div>
                     <div class="form-group">
@@ -222,6 +219,9 @@
             <div class="modal-body">
                 <div class="form-group">
                     <div class="well" id="viewPanelDescription"></div>
+                </div>
+                <div class="form-group">
+                    <div id="setViewIcon"></div>
                 </div>
                 <div class="form-group">
                     <href id="viewPanelLink" class="form-control" aria-describedby="sizing-addon1"></href>
