manage user new view

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -104,13 +104,11 @@
                 <h4 class="modal-title" id="myModalLabel">Add user to dashboard</h4>
             </div>
             <div class="modal-body">
+                <ul id="loadUserToDashboard" class="list-group"></ul>
+                <br>
                 <div class="input-group input-group-lg">
                     <span class="input-group-addon" id="sizing-addon1">@</span>
                     <input id="inputUserMail" type="text" class="form-control" placeholder="e-Mail Adresse User" aria-describedby="sizing-addon1">
-                </div>
-                <div class="modal-body">
-                    <label>Dashboard User</label>
-                        <div id="loadUserToDashboard"></div>
                 </div>
             </div>
             <div class="modal-footer">
