--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,42 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>ConGraph - Login</title>
+    <title>ConGraph - Content Visualization</title>
     <meta charset="utf-8">
+    <meta name="description" content="ConGraph ist ein Tool um Daten grafisch ansprechend zu organisieren." />
     <link rel="stylesheet" href="../css/bootstrap-theme.css" />
     <link rel="stylesheet" href="../css/bootstrap.css" />
-    <link rel="stylesheet" href="../css/login.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="../js/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/login.js"></script>
 </head>
-<body style="background-color: #e0e0e0">
+<body>
 <!--<header>ConGraph <a>powered by NoteJS</a></header>-->
 <!--Login section-->
-<section id="login">
-    <img src="../img/congraph.png" alt="ConGraph Logo" class="center-block img-rounded" style="width: 340px; padding-bottom: 20px">
-    <form class="form-signin" role="form" style="background-color: #fff">
-        <h1 class="form-signin-heading text-center">Login</h1>
-        <div class="form-group">
-            <input type="text" id="flnUser" class="form-control" placeholder="Username" autofocus required>
-        </div>
-        <div class="form-group">
-            <input type="password" id="flnPass" class="form-control" placeholder="Password" required>
-        </div>
-        <div class="form-group">
-            <p class="help-block text-danger hide" id="labelError">Falsche Eingabe</p>
-        </div>
-        <div class="form-group">
-            <a class="btn btn-lg btn-primary btn-block" type="submit" id="btnSignIn">Login</a>
-        </div>
-        <div class="form-group">
-            <a href="#" onclick="$('#modalPWForgot').modal('show')" class="text-center">Passwort vergessen?</a>
-        </div>
-        <a id="btnKontoErstellen" href="#" onclick="$('#modalRegister').modal('show')"><p class="text-center" style="font-size: 16px; padding-top: 15px">Konto erstellen</p> </a>
-    </form>
-</section>
+<header style="height: 40%; min-height: 80px;">
+    <div id="logo" style="height: 100%; position: relative;">
+        <hgroup style="margin-right: 0px; height: 95%;">
+            <h1 id="hdln" style=" position: absolute; bottom: 0px; left: 40%; width: 20%; right:40%; margin-bottom: 25px;">ConGraph</h1>
+            <h2 id="sbhdln" style="position: absolute; bottom: 0px; left: 40%; margin-bottom: 10px;">Visualize your Content</h2>
+        </hgroup>
+        <hr noshade size="1">
+    </div>
+</header>
+
+<div style="height: 60%; min-height: 200px;">
+    <div id="mbar" style="height: 200px; position: relative; top: 10px; left: 40%; width: 250px;">
+        <form class="form-signin" role="form">
+            <input type="text" id="flnUser" class="form-control textframe" placeholder="Username" autofocus required>
+            <input type="password" id="flnPass" class="form-control textframe" placeholder="Password" required>
+            <button type="button" id="btnSignIn"class="btn" style="width: 220px; height: 40px; margin-left: 10px; margin-top: 10px; margin-bottom: 5px;">
+                Login</button>
+            <a href="#" onclick="$('#modalPWForgot').modal('show')" class="text-center" style="margin-left: 10px; ">forgot password</a>
+            <a id="btnKontoErstellen" href="#" onclick="$('#modalRegister').modal('show')"><p class="text-center" style="font-size: 16px; padding-top: 17px; width: 100%; text-align: center;">create account</p> </a>
+        </form>
+    </div>
+</div>
+<footer>Copyright © 2015</footer>
 
 <!--Modal PW Vergessen-->
 <div class="modal fade" id="modalPWForgot" tabindex="-1" role="dialog" aria-hidden="true">
@@ -44,16 +46,16 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Passwort vergessen...</h4>
+                <h4 class="modal-title" id="myModalLabel">Forgot Password...</h4>
             </div>
             <div class="modal-body">
                 <div class="input-group input-group-lg">
                     <span class="input-group-addon" id="sizing-addon1">@</span>
-                    <input id="inputPWForgotMail" type="text" class="form-control" placeholder="e-Mail Adresse" aria-describedby="sizing-addon1">
+                    <input id="inputPWForgotMail" type="text" class="form-control" placeholder="e-Mail Address" aria-describedby="sizing-addon1">
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Abbrechen</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                 <button type="button" class="btn btn-primary" id="sendPWForgotMail">Send Mail</button>
             </div>
         </div>
@@ -64,22 +66,22 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Registrierung</h4>
+                <h4 class="modal-title" id="myModalLabel">Register</h4>
             </div>
             <div class="modal-body">
                 <div class="form-group">
-                    <input id="inputRegisterMail" type="text" class="form-control input-lg" placeholder="e-Mail Adresse" aria-describedby="sizing-addon1">
+                    <input id="inputRegisterMail" type="text" class="form-control input-lg" placeholder="e-Mail Address" aria-describedby="sizing-addon1">
                 </div>
                 <div class="form-group">
-                    <input id="inputRegisterName" type="text" class="form-control input-lg" placeholder="Benutzername" aria-describedby="sizing-addon1">
+                    <input id="inputRegisterName" type="text" class="form-control input-lg" placeholder="Username" aria-describedby="sizing-addon1">
                 </div>
                 <div class="form-group">
                     <input id="inputRegisterPW" type="password" class="form-control input-lg" placeholder="Password" aria-describedby="sizing-addon1">
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Abbrechen</button>
-                <button type="button" class="btn btn-primary" id="sendRegister">Registrieren</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" id="sendRegister">Register</button>
             </div>
         </div>
     </div>
